methods' names changed in test files